support file and directory indexing
when local replicas are added, use the local hostname as replica name
(not "localhost")

support indexing a single file

when indexing the same file multiple times, do not add multiple copies
of the same replica - duplicate attempts to add the same path as a
replica simply update the already-known replica

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,4 @@ md-5 = "*"
 reqwest = { version = "*", features = ["rustls-tls-native-roots"] }
 clap = { version = "4", features = ["derive"] }
 chrono = "*"
+gethostname = "0.4.3"
