with much terror, cli can replicate files

--- a/hof-cli/Cargo.toml
+++ b/hof-cli/Cargo.toml
@@ -14,3 +14,5 @@ hofvarpnir = { path = ".." }
 clap = { version = "4", features = ["derive"] }
 hex = "*"
 gethostname = "0.4.3"
+tokio = "*"
+reqwest = { version = "*", features = ["stream"] }
